fixed scrollbar's bug and created an active class at css

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,8 @@ ul {
 }
 
 ul::-webkit-scrollbar {
-    display:none;
-}
-
-ul:hover::-webkit-scrollbar {
-    display:block;
-    height: 3px;
+    height: 5px;
+    
 }
 
 ul:hover::-webkit-scrollbar-track{
@@ -34,6 +30,7 @@ ul:hover::-webkit-scrollbar-track{
 
 ul:hover::-webkit-scrollbar-thumb {
     background-color: rgba(200, 200, 200, 1);
+    border-radius: 5px;
 }
 
 ul:hover::-webkit-scrollbar-thumb:hover {
@@ -96,7 +93,7 @@ ul:hover::-webkit-scrollbar-thumb:hover {
     align-items: flex-start;
     position: relative;
     background-color: #FFFFFF;
-    box-shadow: 0 0 3px 0 rgba(0,0,0, 0.1);
+    box-shadow: 0px 0px 5px -4px rgba(0, 0, 0, 0.25);;
 }
 
 .option img {
@@ -152,4 +149,9 @@ ul:hover::-webkit-scrollbar-thumb:hover {
     color: #fff;
     background-color:#CBCBCB;
     border: none;
+    cursor: not-allowed;
+}
+
+.active{
+    box-shadow: inset 0px 0px 0px 5px #32B72F;
 }
